refactor: improve codebase and return custom code and expiry date
