# server/src/entities/User.ts
@@ -3,21 +3,22 @@ import {
   PrimaryGeneratedColumn,
   Column,
   CreateDateColumn,
-} from 'typeorm';
+} from "typeorm";
 
-@Entity('users')
-export class User{
-  @PrimaryGeneratedColumn('uuid')
+@Entity("users")
+export class User {
+  @PrimaryGeneratedColumn("uuid")
   id!: string;
 
+  @Column({type:'varchar',unique:true})
+  username!: string;
 
-@Column({type: 'varchar', unique: true})
-email!: string;
+  @Column({ type: "varchar", unique: true })
+  email!: string;
 
-@Column({type: 'varchar'})
-password!:string;
+  @Column({ type: "varchar" })
+  password!: string;
 
-@CreateDateColumn()
-createdAt!: Date;
-
+  @CreateDateColumn()
+  createdAt!: Date;
 }
