# server/src/services/AuthService.ts
@@ -1,58 +1,51 @@
-import bcrypt from 'bcryptjs';
-import jwt from 'jsonwebtoken';
-import {AppDataSource} from '../lib/database';
-import { User } from '../entities/User';
+import bcrypt from "bcryptjs";
+import jwt from "jsonwebtoken";
+import { AppDataSource } from "../lib/database";
+import { User } from "../entities/User";
 
-export class AuthService{
+export class AuthService {
+  private repo = AppDataSource.getRepository(User);
 
-private repo = AppDataSource.getRepository(User);
+  async register(
+    email: string,
+    username: string,
+    password: string,
+  ): Promise<{ token: string; username:string ,email: string }> {
+    const existing = await this.repo.findOne({
+      where: { email },
+    });
 
-async register(email: string, password: string): Promise<{token: string}>{
-  const existing = await this.repo.findOne( {
-    where: {email}
-  })
+    if (existing) throw new Error("Email already in use!");
 
-  if(existing) throw new Error('Email already in use!');
+    const hashed = await bcrypt.hash(password, 10);
+    const user = this.repo.create({ email, username, password: hashed });
+    await this.repo.save(user);
 
-  const hashed = await bcrypt.hash(password,10);
-  const user = this.repo.create({email,password:hashed});
-  await this.repo.save(user);
+    const token = jwt.sign(
+      { userId: user.id, email: user.email, username: user.username },
+      process.env.JWT_SECRET!,
+      { expiresIn: "7d" },
+    );
 
-  const token = jwt.sign(
-    {userId: user.id,
-      email:user.email
-    },
-    process.env.JWT_SECRET!,
-    {expiresIn: '7d'}
-  );
+    return { token, username: user.username, email: user.email };
+  }
 
-  return {token}
+  async login(
+    email: string,
+    password: string,
+  ): Promise<{ token: string, username: string, email: string }> {
+    const user = await this.repo.findOne({ where: { email } });
+    if (!user) throw new Error("User not found!");
 
-}
+    const valid = await bcrypt.compare(password, user.password);
+    if (!valid) throw new Error("Invalid credentials!");
 
+    const token = jwt.sign(
+      { userId: user.id,username:user.username, email: user.email },
+      process.env.JWT_SECRET!,
+      { expiresIn: "7d" },
+    );
 
-async login(email: string, password: string) : Promise <{token: string}> {
-  const user = await this.repo.findOne({where: {email}});
-  if(!user) throw new Error('User not found!');
-
-  const valid = await bcrypt.compare(password, user.password);
-  if(!valid) throw new Error('Invalid credentials!');
-
-
-  const token = jwt.sign(
-    {userId: user.id,
-      email: user.email
-    },
-    process.env.JWT_SECRET!,
-    {expiresIn: '7d'}
-  )
-
-
-  return {token};
-}
-
-
-
-
-
+    return { token, username : user.username, email: user.email };
+  }
 }
